<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.note2">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollview">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text1"
                android:layout_marginTop="15sp"
                android:text="@string/note_title"
                android:textSize="25sp"
                android:textStyle="italic"
                android:gravity="start" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:text="@string/date"
                android:textSize="25sp"
                android:textStyle="italic"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@id/text1"
                android:textAlignment="viewEnd"
                android:gravity="end" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edt_text2"
                android:hint="@string/enter_note_title"
                android:layout_below="@id/text1"
                android:textSize="25sp"
                android:textStyle="bold|italic"
                android:layout_marginTop="10sp"
                android:inputType="none"
                android:importantForAutofill="no"
                android:labelFor="@+id/edt_text3"/>

            <EditText
                android:id="@+id/edt_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_text2"
                android:layout_marginTop="-6dp"
                android:autofillHints="no"
                android:gravity="top"
                android:hint="@string/enter_note"
                android:inputType="none"
                android:minHeight="390sp" />


        </RelativeLayout>

    </ScrollView>

    <Button
        android:onClick="ClickSaveButton"
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/save"
        android:textSize="23sp" />
    <Button
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="57sp"
        android:id="@+id/delete"
        android:text="@string/delete"
        android:layout_above="@+id/save_button"
        android:textSize="23sp"/>




</RelativeLayout>










